Fix add Favourite genres feature